--- a/css/common.css
+++ b/css/common.css
@@ -49,7 +49,7 @@ table{border-collapse:collapse;border-spacing:0}
  width: 100%;
  background-color: #039;
  color: #eee;
- font-family: ;
+ font-family:"Montserrat","Nanum Square","NanumSquare", sans-serif;
  text-transform: uppercase;
  text-decoration: none;
  line-height: 30px;
