--- a/css/style.css
+++ b/css/style.css
@@ -802,9 +802,9 @@ header{
 .project .pro_arrow{
     position:absolute;
     width:1200px;
-    top:320px;
+    top:50%;
     left:50%;
-    transform:translateX(-50%);
+    transform:translate(-50%,-50%);
 }
 
 .project .pro_arrow>li{
@@ -1164,6 +1164,10 @@ header{
         height:40px;
     }
     
+    .project .pro_arrow{
+        top:40%;
+    }
+    
     /* contact */
     .contact .con_menu>li span{
         font-size:14px;
@@ -1387,7 +1391,7 @@ header{
     }
     
     .project .pro_arrow{
-        top:50%;
+        top:54%;
         transform:translate(-50%,-50%);
     }
     
